--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "express-joi-validation": "^5.0.0",
     "joi": "^17.4.0",
+    "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "tsconfig": "^7.0.0"
